[package]
name = "sessiongrep"
version = "0.1.0"
edition = "2021"
description = "Local-first search, inspection, export, and resume for Claude Code and Codex CLI sessions, with an MCP server for agent-driven recall."
license = "MIT"
repository = "https://github.com/braincompany/sessiongrep"
readme = "README.md"
keywords = ["cli", "search", "claude", "codex", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
fuzzy-matcher = "0.3"
ignore = "0.4"
ratatui = "0.29"
regex = "1.12"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"

[[bin]]
name = "sessiongrep"
path = "src/main.rs"

[[bin]]
name = "sessiongrep-mcp"
path = "src/mcp.rs"

[dev-dependencies]
tempfile = "3.23"
